--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "devDependencies": {
+    "@types/crypto-js": "^4.1.1",
     "@types/express": "^4.17.17",
     "ts-node": "^10.9.1",
     "typescript": "^5.0.4"
@@ -8,6 +9,7 @@
     "@types/node": "^18.15.13",
     "@types/ws": "^8.5.4",
     "body-parser": "^1.20.2",
+    "crypto-js": "^4.1.1",
     "express": "^4.18.2",
     "ws": "^8.13.0"
   }
